<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="16dp"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".FeedbackActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimaryVariant"
            android:elevation="2dp"
            android:theme="@style/Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/feedback_menu_main"
            app:title="@string/feedback_send_feedback" />

        <EditText
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine"
            android:minLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField" />

        <CheckBox
            android:id="@+id/logs_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:buttonTint="@android:color/holo_blue_light"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/logs_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/feedback_system_logs"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/view_logs"
            app:layout_constraintStart_toEndOf="@+id/logs_checkbox"
            app:layout_constraintTop_toTopOf="@+id/logs_checkbox" />

        <Button
            android:id="@+id/view_logs"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/feedback_view"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="@+id/logs_checkbox"
            app:layout_constraintStart_toEndOf="@+id/logs_checkbox"
            app:layout_constraintTop_toBottomOf="@id/logs_text" />

        <CheckBox
            android:id="@+id/screenshot_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:buttonTint="@android:color/holo_blue_light"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logs_checkbox" />

        <TextView
            android:id="@+id/screenshot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/feedback_screenshot"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/edit_button"
            app:layout_constraintStart_toEndOf="@+id/screenshot_checkbox"
            app:layout_constraintTop_toTopOf="@+id/screenshot_checkbox" />

        <Button
            android:id="@+id/edit_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/feedback_edit"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="@+id/screenshot_checkbox"
            app:layout_constraintStart_toEndOf="@+id/screenshot_checkbox"
            app:layout_constraintTop_toBottomOf="@id/screenshot_text" />

        <ImageView
            android:id="@+id/screenshot"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/feedback_screenshot"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/screenshot_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/screenshot_checkbox"
            tools:src="@android:color/darker_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>